# subsets-connectors

./: .example.env  .gitignore  Dockerfile.main  LICENSE  README.md  dagster.yaml  pyproject.toml  pytest.ini  workspace.yaml
.github/workflows/: ci.yaml  dagster_ci.yaml  deploy_to_gke.yaml
deployment/: Dockerfile.user_code  cloudbuild.yaml  values.yaml
integrations/: __init__.py
integrations/assets/economist/: assets.py
integrations/assets/fmp/: analysts.py  assets.py  balance_sheet_statements.py  cash_flow_statements.py  coverage.py  dividends.py  earnings_suprise.py  employee_counts.py  end_of_day_prices.py  esg_scores.py  executive_compensation.py  income_statements.py  insider_trading.py  institutional_ownership.py  key_metrics.py  market_cap.py  senate_trading.py  source.py  stock_grade.py  upgrades_downgrades.py  utils.py
integrations/assets/fred/: assets.py
integrations/assets/geo/: assets.py  country_code_2_to_simple_name.py
integrations/assets/internal/: assets.py
integrations/assets/our_world_in_data/: assets.py
integrations/assets/tsa/: assets.py
integrations/assets/unctad/: balance_of_payments.py  commodity_prices.py  creative_economy.py  digital_economy.py  inflation_and_exchange_rates.py  international_merchandise_trade.py  international_trade_in_services.py  maritime_transport.py  output_and_income.py  plastics_trade.py  (+8 more)
integrations/io_managers/: gcs_pandas_io_manager.py  gcs_parquet_io_manager.py  gcs_pyarrow_io_manager.py  local_pandas_io_manager.py  local_pyarrow_io_manager.py  partitioned_parquet.py  vanilla_partitioned_parquet.py
integrations/jobs/: fmp.py  fred.py  hackernews.py  internal.py  regular.py  unctad.py  wikipedia.py
integrations/partition_defs/: defs.py
tests/: test_integrations.py
(+6 files in other folders)
